# squiggles

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  design.md  release-plz.toml
.config/squiggles/: config.styx
.github/workflows/: ci.yml
crates/squiggles-config/: CHANGELOG.md  Cargo.toml
crates/squiggles-config/src/: lib.rs
editors/zed-squiggles/: Cargo.toml  extension.toml
editors/zed-squiggles/src/: lib.rs
src/: config.rs  diagnostics.rs  lib.rs  lsp.rs  main.rs  metadata.rs  nextest.rs  progress.rs  runner.rs  store.rs  watcher.rs
test-fixtures/: color-backtrace-output.jsonl  nextest-output-with-backtrace.jsonl  styx-ariadne-failure.jsonl
test-fixtures/color-backtrace-crate/: Cargo.toml
test-fixtures/color-backtrace-crate/src/: lib.rs
test-fixtures/parse-corpus/: color-backtrace-failures.jsonl  styx-multiline-failures.jsonl
test-fixtures/sample-crate/: Cargo.toml
test-fixtures/sample-crate/src/: lib.rs
test-fixtures/styx-failure/: error.rs
tests/: integration.rs  lsp_tests.rs
xtask/src/: main.rs
