[workspace]
members = ["xtask"]
exclude = ["editors/zed-squiggles", "test-fixtures/sample-crate"]

[package]
name = "squiggles"
version = "0.1.0"
edition = "2024"

[dependencies]
# Facet ecosystem
facet = { git = "https://github.com/facet-rs/facet", branch = "main", features = ["alloc"] }
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main" }

# Config parsing
figue = { git = "https://github.com/bearcove/figue", branch = "main" }
facet-styx = { git = "https://github.com/bearcove/styx", branch = "main", features = ["figue"] }

# Async runtime (tower-lsp is built on tokio)
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"

# LSP framework
tower-lsp = "0.20"

# File watching
notify = "9.0.0-rc.1"

# Rust lexer for finding test functions
rustc_lexer = "0.1"

# Strip ANSI escape codes from panic output
strip-ansi-escapes = "0.2"

# Schema embedding
styx-embed = { git = "https://github.com/bearcove/styx", branch = "main" }

[build-dependencies]
facet = { git = "https://github.com/facet-rs/facet", branch = "main", features = ["alloc"] }
facet-styx = { git = "https://github.com/bearcove/styx", branch = "main" }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
futures = "0.3"
tower = "0.4"
